# pytest-just

./: .gitignore  BLOG_POST_DRAFT.md  LICENSE  README.md  RELEASE_NOTES.md  SPEC.md  USER_GUIDE.md  justfile  pyproject.toml
.github/workflows/: ci.yml
docs/: examples_appendix.md  external_contributor_cover_note.md  external_contributor_pr_assessment.md  recipe_reuse_report.md
docs/announcements/: just_maintainer_note.md  linkedin_announcement.md  release_announcement.md
examples/: README.md
examples/local/: MANIFEST.tsv  README.md
examples/local/Financial-Models-Numerical-Methods/: justfile
examples/local/SUFM/: justfile
examples/local/acp-dlai/: justfile
examples/local/ai-leen/: justfile
examples/local/aidb-duck/: justfile
examples/local/anglicare/: justfile
examples/local/api-endpoint-examples/: justfile
examples/local/app-propelauth/: justfile
examples/local/apple-script/: justfile
examples/local/australian-boards-db/: justfile
examples/local/aws-setup/: justfile
examples/local/boronia-park/: justfile
examples/local/bubble-cosh/: justfile
examples/local/bus-value/: justfile
examples/local/camino-forgotten-OLD/: justfile
examples/public/: README.md
scripts/: build_recipe_db.py
src/pytest_just/: __init__.py  errors.py  fixture.py  plugin.py
tests/: test_assert_parameter.py  test_build_recipe_db.py  test_dry_run.py  test_fixture_edge_cases.py  test_hypothesis_properties.py  test_linting.py  test_module_fixture.py  test_plugin_options.py  test_public_examples.py  test_query_pack.py  test_refactoring.py
(+75 files in other folders)
