[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-just"
version = "0.1.0"
description = "A pytest plugin for testing justfile recipes"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Matthew Booth" }]
keywords = ["pytest", "just", "justfile", "testing", "command-runner"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "loguru>=0.7.2",
  "pytest>=8.0.0",
]

[project.entry-points."pytest11"]
just = "pytest_just.plugin"

[project.optional-dependencies]
dev = [
  "duckdb>=1.2.0",
  "ruff>=0.6.0",
  "typer>=0.12.5",
  "ty>=0.0.1a12",
  "hypothesis>=6.151.9",
]

[tool.pytest.ini_options]
markers = [
  "justfile: marks tests as justfile recipe tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"
